# echostats

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  release-drafter.yml
.github/workflows/: ci.yml  cleanup.yml  label.yml  release.yml  security.yml
api/: Dockerfile  deduplicate.py  pyproject.toml  seed.py
api/app/: config.py  database.py  logging_config.py  main.py  metrics.py  telemetry.py
api/app/middleware/: auth.py  rate_limit.py  request_id.py  security.py  timeout.py
api/app/migrations/: 001_dedup_listening_history.py  __init__.py
api/app/models/: __init__.py  album.py  analytics.py  api_log.py  artist.py  listening_history.py  playlist.py  rollup.py  sync_job.py  track.py  user.py
api/app/routers/: albums.py  analytics.py  api_logs.py  artists.py  auth.py  browse.py  genres.py  health.py  history.py  library.py  player.py  playlists.py  recommendations.py  sync_jobs.py  tracks.py
api/app/services/: analytics_service.py  import_service.py  rollup_service.py  spotify_client.py  sync_service.py  token_service.py
api/app/tasks/: worker.py
api/app/utils/: crypto.py
api/tests/: conftest.py  test_analytics_router.py  test_analytics_service.py  test_api_docs.py  test_auth.py  test_config.py  test_crypto.py  test_health.py  test_health_router.py  test_history_router.py  test_import_service.py  test_middleware.py  test_rollup_service.py  test_spotify_client.py  test_sync_jobs_router.py  test_sync_service.py  test_sync_service_extended.py  test_token_service.py  test_worker.py
docs/: astro.config.mjs  package-lock.json  package.json
docs/public/: particles.js
docs/src/content/docs/: index.mdx
helm/echostats/: Chart.yaml  values.yaml
helm/echostats/templates/: NOTES.txt  _helpers.tpl  api-deployment.yaml  backup-cronjob.yaml  configmap.yaml  hpa.yaml  ingress.yaml  ingressroute.yaml  mongodb.yaml  pdb.yaml  redis.yaml  secret.yaml  serviceaccount.yaml  services.yaml  web-deployment.yaml  worker-deployment.yaml
monitoring/grafana/dashboards/: api-overview.json
monitoring/prometheus/: alerts.yml  scrape.yml
tests/load/: README.md  api-load.js
web/: .trivyignore  Dockerfile  biome.json  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  server.js  tailwind.config.ts
web/e2e/: contract.spec.ts  dashboard.spec.ts  playwright.config.ts
web/public/: manifest.json  sw.js
web/src/app/: globals.css  layout.tsx  manifest.ts  page.tsx
web/src/app/dashboard/: layout.tsx  page.tsx
web/src/app/favicon-32x32.png/: route.ts
web/src/app/sw.js/: route.ts
web/src/components/: error-boundary.tsx  providers.tsx  theme-provider.tsx
web/src/components/charts/: bar-chart.tsx  heatmap.tsx  index.ts  line-chart.tsx  listening-clock.tsx  pie-chart.tsx  radar-chart.tsx  streak-calendar.tsx
web/src/components/dashboard/: audio-profile.tsx  discovery-score.tsx  now-playing.tsx  recent-feed.tsx  sync-banner.tsx
web/src/components/layout/: header.tsx  (+3 more)
web/src/hooks/: useCountUp.ts  useIsMobile.ts  useKeyboardShortcuts.ts
web/src/lib/: api.ts  export.ts  themes.ts  types.ts
(+82 files in other folders)
