[project]
name = "echostats-api"
version = "0.1.0"
description = "EchoStats API — Spotify analytics backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "beanie>=2.0.0",
    "pymongo>=4.8.0",
    "redis>=5.2.0",
    "arq>=0.26.0",
    "httpx>=0.28.0",
    "pydantic-settings>=2.7.0",
    "python-jose[cryptography]>=3.3.0",
    "cryptography>=44.0.0",
    "structlog>=24.4.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "python-multipart>=0.0.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "DTZ", "T20", "ICN", "PIE", "PT", "RSE", "RET", "SIM", "TID", "TCH", "ARG", "ERA", "PGH", "PL", "TRY", "FLY", "PERF", "RUF"]
ignore = [
    "S101", "TRY003", "PLR0913", "E501", "RUF012", "PLR2004", "T201", "S311",
    "PLC0415", "ARG001", "ARG002", "DTZ003", "TRY400",
    # Pre-existing: suppress until addressed in a dedicated cleanup pass
    "DTZ007", "F841", "TRY300", "TRY301", "TRY004", "SIM105", "S110", "S105",
    "S104", "PT011", "PLW0602", "PLW0603", "PLR0912", "PLR0915", "B017", "B904",
    "E711",
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
